<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dabble</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_option">Option</string>
    <string name="music">Music</string>
    <string name="back_to_game">Back to Game</string>
    <string name="back_to_menu">Back_to_Menu</string>
    <string name="hints">Hints</string>
    <string name="music_summary">Play Background Music</string>
    <string name="hints_summary">Show Hints</string>
    <string name="new_game_label">New Game</string>
    <string name="settings_label">Settings</string>
    <string name="acknowledgement_label">Acknowledgement</string>
    <string name="continue_label">Continue Game</string>
    <string name="exit_label">Quit</string>
    <string name="dismiss">Dismiss</string>
    <string name="acknowledgement_info">        Background music: http://www.melodyloops.com/mp3/preview-fast-and-danger.mp3 \n</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_tt">TT</string>
    <string name="timer_format">01:30.000</string>
    <string name="score_format">Score: 0 </string>
    <string name="loading">Loading...</string>
    <string name="title_activity_game_over">GameOver</string>
    <string name="your_score_title">---------------Your Score---------------</string>
    <string name="high_score_title">---------------High Score---------------</string>
    <string name="play_again">Play Again</string>
    <string name="go_menu">Main Menu</string>
    <string name="title_activity_pause">PauseActivity</string>
    <string name="title_activity_dabble_wait_room">DabbleWaitRoom</string>
    <string name="new_guy_found">New Guy Found</string>
    <string name="title_activity_shuffle_board">ShuffleBoard</string>

</resources>
