<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameMenu" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dip"
                android:text="Dabble"
                android:textSize="24.5sp" />

            <Button
                android:id="@+id/continue_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/continue_label" />

            <Button
                android:id="@+id/new_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_game_label" />

            <Button
                android:id="@+id/settings_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_label" />

            <Button
                android:id="@+id/acknowledgement_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/acknowledgement_label" />

            <Button
                android:id="@+id/exit_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Quit" />
            
        </LinearLayout>
    </ScrollView>

