<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tile="http://schemas.android.com/apk/res/edu.neu.zhengxingchen.madcourse.dabble"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameActivity" >
    
	<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         >

		<TextView
		    android:id="@+id/timer_text"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/timer_format"
		    android:layout_alignParentLeft="true"
		    android:textAppearance="?android:attr/textAppearanceLarge" />
		
		
		<TextView
		    android:id="@+id/game_title"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/loading"
		    android:layout_centerInParent="true"
		    android:textAppearance="?android:attr/textAppearanceLarge" />
		
		<TextView
		    android:id="@+id/score_text"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/score_format"
		    android:layout_alignParentRight="true"
		    android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal" >

        <edu.neu.zhengxingchen.madcourse.dabble.Tile
            android:id="@+id/tile1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_margin="5dp"
            tile:borderRadius="30"/>

        <edu.neu.zhengxingchen.madcourse.dabble.Tile
            android:id="@+id/tile2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_margin="5dp"
            tile:borderRadius="30"/>

        <edu.neu.zhengxingchen.madcourse.dabble.Tile
            android:id="@+id/tile3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_margin="5dp"
            tile:borderRadius="30"/>
    </LinearLayout>

   

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal" >

        <edu.neu.zhengxingchen.madcourse.dabble.Tile
            android:id="@+id/tile4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_margin="5dp"
            tile:borderRadius="30"/>

       <edu.neu.zhengxingchen.madcourse.dabble.Tile
           android:id="@+id/tile5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_margin="5dp"
            tile:borderRadius="30"/>

        <edu.neu.zhengxingchen.madcourse.dabble.Tile
            android:id="@+id/tile6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_margin="5dp"
            tile:borderRadius="30"/>
        
        <edu.neu.zhengxingchen.madcourse.dabble.Tile
            android:id="@+id/tile7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_margin="5dp"
            tile:borderRadius="30"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal" >

        <edu.neu.zhengxingchen.madcourse.dabble.Tile
            android:id="@+id/tile8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_margin="5dp"
            tile:borderRadius="30"/>

        <edu.neu.zhengxingchen.madcourse.dabble.Tile
            android:id="@+id/tile9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_margin="5dp"
            tile:borderRadius="30"/>
        
        <edu.neu.zhengxingchen.madcourse.dabble.Tile
            android:id="@+id/tile10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_margin="5dp"
            tile:borderRadius="30"/>
        
        <edu.neu.zhengxingchen.madcourse.dabble.Tile
            android:id="@+id/tile11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_margin="5dp"
            tile:borderRadius="30"/>
        
        <edu.neu.zhengxingchen.madcourse.dabble.Tile
            android:id="@+id/tile12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_margin="5dp"
            tile:borderRadius="30"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal" >

        <edu.neu.zhengxingchen.madcourse.dabble.Tile
            android:id="@+id/tile13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_margin="5dp"
            tile:borderRadius="30"/>

      <edu.neu.zhengxingchen.madcourse.dabble.Tile
         	 android:id="@+id/tile14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_margin="5dp"
            tile:borderRadius="30"/>

        <edu.neu.zhengxingchen.madcourse.dabble.Tile
            android:id="@+id/tile15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_margin="5dp"
            tile:borderRadius="30"/>
        
        <edu.neu.zhengxingchen.madcourse.dabble.Tile
            android:id="@+id/tile16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_margin="5dp"
            tile:borderRadius="30"/>
        
        <edu.neu.zhengxingchen.madcourse.dabble.Tile
            android:id="@+id/tile17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_margin="5dp"
            tile:borderRadius="30"/>
        
        <edu.neu.zhengxingchen.madcourse.dabble.Tile
            android:id="@+id/tile18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_margin="5dp"
            tile:borderRadius="30"/>
    </LinearLayout>
  
</LinearLayout>